--- a/bq-project/src/app/login/login.component.html
+++ b/bq-project/src/app/login/login.component.html
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 text-center">
+      <div class="container-img col-md-6">
         <img src="assets/logo.png" class="img-fluid logo" alt="" />
         <img
           src="assets/burgerimg.png"
