--- a/bq-project/src/app/login/login.component.scss
+++ b/bq-project/src/app/login/login.component.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .title {
@@ -24,4 +24,18 @@
 
 .burgerimg {
     width: 80%;
+}
+
+.card{
+    margin-top: 7.5rem!important;
+    border-radius: 1.5rem;
+}
+
+.container-img{
+    text-align: center!important;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 2rem;
 }
