implementation get http get workers

--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -30,3 +30,19 @@
     </tr>
   </tbody>
 </table>
+
+<table class="table table-striped mt-3">
+  <thead>
+    <tr>
+      <th scope="col">Correo</th>
+      <th scope="col">Contraseña</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let worker of listWorkers">
+      <td>{{ worker.email }}</td>
+      <td>{{ worker.password }}</td>
+    </tr>
+  </tbody>
+</table>
