--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -1,48 +1,2 @@
 <p>admin works!</p>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
-
-<table class="table table-striped mt-3">
-  <thead>
-    <tr>
-      <th scope="col">Correo</th>
-      <th scope="col">Contraseña</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let worker of listWorkers">
-      <td>{{ worker.email }}</td>
-      <td>{{ worker.password }}</td>
-    </tr>
-  </tbody>
-</table>
+<app-admin-user-list [users]="listWorkers"></app-admin-user-list>
