--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -30,19 +30,6 @@
     </tr>
   </tbody>
 </table>
-
-<table class="table table-striped mt-3">
-  <thead>
-    <tr>
-      <th scope="col">Correo</th>
-      <th scope="col">Contraseña</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let worker of listWorkers">
-      <td>{{ worker.email }}</td>
-      <td>{{ worker.password }}</td>
-    </tr>
-  </tbody>
-</table>
+<button type="button" class="btn btn-outline-primary">Primary</button>
+<button type="button" class="btn btn-outline-secondary">Secondary</button>
+<app-admin-user-list></app-admin-user-list>
