--- a/bq-project/src/app/admin-user-list/admin-user-list.component.html
+++ b/bq-project/src/app/admin-user-list/admin-user-list.component.html
@@ -1,16 +1,11 @@
 <p>admin-user-list works!</p>
-<table class="table table-striped mt-3">
-  <thead>
-    <tr>
-      <th scope="col">Correo</th>
-      <th scope="col">Contraseña</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let pepito of users">
-      <td>{{ pepito.email }}</td>
-      <td>{{ pepito.password }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="card" style="width: 12rem" *ngFor="let worker of listWorkers">
+  <div class="card-body">
+    <p class="card-text" *ngIf="worker.roles.admin">Administrador</p>
+    <h4 class="card-title">{{ worker.id }}</h4>
+    <h5 class="card-title">{{ worker.email }}</h5>
+    <p class="card-text">{{ worker.password | currency: 'USD' }}</p>
+    <a class="btn btn-primary" (click)="deleteUser(worker)"> Eliminar </a>
+    <a class="btn btn-secondary"> Editar </a>
+  </div>
+</div>
