--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -1,3 +1,4 @@
+<app-admin-user-form></app-admin-user-form>
 <div class="container">
   <div class="row row-cols-2 row-cols-lg-3">
     <app-admin-products-list
