--- a/bq-project/src/app/admin-user-form/admin-user-form.component.html
+++ b/bq-project/src/app/admin-user-form/admin-user-form.component.html
@@ -1,1 +1,87 @@
 <p>admin-user-form works!</p>
+<div class="card mt-5">
+  <div class="card-body p-5">
+    <h3 class="title text-center">Agregar Usuario</h3>
+    <form [formGroup]="userForm">
+      <div class="form-group">
+        <label for="validationid" class="form-label mt-2"> id </label>
+        <input
+          type="number"
+          class="form-control"
+          formControlName="id"
+          id="validationid"
+          placeholder="Ingresa tu ID" />
+        <div
+          class="text-danger"
+          *ngIf="
+            userForm.get('id')?.hasError('required') &&
+            userForm.get('id')?.touched
+          ">
+          <span>El ID <strong> es obligatorio.</strong></span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="validationEmail" class="form-label mt-2"> Correo </label>
+        <input
+          type="email"
+          class="form-control"
+          formControlName="email"
+          id="validationEmail"
+          placeholder="Ingresa tu Correo" />
+        <div
+          class="text-danger"
+          *ngIf="
+            userForm.get('email')?.hasError('required') &&
+            userForm.get('email')?.touched
+          ">
+          <span>El correo <strong> es obligatorio.</strong></span>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="validationPassword" class="form-label mt-2">
+          Contraseña
+        </label>
+        <input
+          type="password"
+          class="form-control"
+          formControlName="password"
+          id="validationPassword"
+          placeholder="Ingresa tu Contraseña" />
+        <div
+          class="text-danger"
+          *ngIf="
+            userForm.get('password')?.hasError('required') &&
+            userForm.get('password')?.touched
+          ">
+          <span>La contraseña <strong>es obligatoria.</strong></span>
+        </div>
+      </div>
+      <label class="form-label mt-2"> ¿Es Administrador? </label>
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="inlineRadioOptions"
+          id="inlineRadio1"
+          value="option1" />
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input
+          class="form-check-input"
+          type="radio"
+          name="inlineRadioOptions"
+          id="inlineRadio2"
+          value="option2" />
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+      <div class="form-group mt-5 text-center">
+        <input
+          type="submit"
+          [disabled]="userForm.invalid"
+          class="btnSubmit"
+          value="Iniciar Sesión" />
+      </div>
+    </form>
+  </div>
+</div>
