--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -33,3 +33,4 @@
 <button type="button" class="btn btn-outline-primary">Primary</button>
 <button type="button" class="btn btn-outline-secondary">Secondary</button>
 <app-admin-user-list></app-admin-user-list>
+<app-admin-products-form></app-admin-products-form>
