--- a/bq-project/src/app/login/login.component.html
+++ b/bq-project/src/app/login/login.component.html
@@ -52,6 +52,7 @@
               <div class="form-group mt-5 text-center">
                 <input
                   type="submit"
+                  routerLink="/admin"
                   [disabled]="loginForm.invalid"
                   class="btnSubmit"
                   value="Iniciar Sesión" />
