--- a/bq-project/src/app/admin-user-list/admin-user-list.component.html
+++ b/bq-project/src/app/admin-user-list/admin-user-list.component.html
@@ -12,7 +12,7 @@
       <a class="btn" (click)="deleteUser(worker)">
         <i class="fa-solid fa-trash"> </i>
       </a>
-      <a class="btn" (click)="updateUser()"
+      <a class="btn" (click)="updateUser(worker)"
         ><i class="fa-solid fa-pen-to-square"></i>
       </a>
     </div>
