Css Admin, with admin-user-list and admin-user-form

--- a/bq-project/src/app/admin-user-form/admin-user-form.component.html
+++ b/bq-project/src/app/admin-user-form/admin-user-form.component.html
@@ -1,5 +1,4 @@
-<p>admin-user-form works!</p>
-<div class="card mt-5">
+<div class="card">
   <div class="card-body p-5">
     <h3 class="title text-center">Agregar Usuario</h3>
     <form [formGroup]="userForm" (ngSubmit)="addPerson()">
