--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -1,2 +1,100 @@
-<app-admin-user-form></app-admin-user-form>
-<app-admin-user-list></app-admin-user-list>
+<section class="admin-section">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light" style="margin: 0 5%;">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img
+            class="img-logo"
+            src="assets/logo.png"
+            alt=""
+            width="270"
+            height="150"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse"
+          id="navbarSupportedContent"
+          style="gap: 6%">
+          <ul class="navbar-nav mb-lg-0">
+            <li class="nav-item dropdown" style="margin-left: 30px;">
+              <a
+                class="nav-link dropdown-toggle bg-light"
+                href="#"
+                style="height: 45px; padding-top: 10px;"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Usuarios</a></li>
+                <li><a class="dropdown-item" href="#">Productos</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex" style="width: 50%">
+            <input
+              class="form-control me-2 bg-light"
+              style="height: 50px;"
+              type="search"
+              placeholder="Search"
+              aria-label="Search" />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="row" style="justify-content: space-evenly;margin: 0;">
+    <div class="col-3 d-flex" style="
+    justify-content: center;" >
+        <div class="card p-2 dashboard-container" style="width: 100%; height: 100%;">
+            <div class="card-body container-card-body">
+              <div class="box-dashboard">
+                <h5 class="bg-primary">Dashboard</h5>
+              </div>
+              <div class="datos-admin-container">
+                <img
+                  src="assets/administrador1.jpg"
+                  alt=""
+                  class="img-administradora" />
+                <h5 class="card-title">AdminName</h5>
+              </div>
+              <div class="btn-group-vertical botones">
+                <div class="btn-group-vertical">
+                    <button type="button" class="btn btn-outline-primary mt-5">
+                        Customers
+                      </button>
+                      <button type="button" class="btn btn-outline-secondary mt-3">
+                        Productos
+                      </button>
+                </div>
+               <div class="btn-logOut mt-5">
+                   <button type="button" class="btn btn-outline-secondary mt-5">
+                logOut
+              </button>
+            </div>
+              </div>
+            </div>
+          </div>
+    </div>
+    <div class="col-5 p-1 m-1 bg-light" style="border-radius:40px">
+      <app-admin-user-list></app-admin-user-list>
+    </div>
+    <div class="col-3 p-1 m-1">
+        <app-admin-user-form></app-admin-user-form>
+    </div>
+  </div>
+</section>
