--- a/bq-project/src/app/admin-user-form/admin-user-form.component.html
+++ b/bq-project/src/app/admin-user-form/admin-user-form.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body p-5">
-    <h3 class="title text-center">Agregar Usuario</h3>
+    <h3 class="title text-center">{{ title }}</h3>
     <form [formGroup]="userForm" (ngSubmit)="addPerson()">
       <div class="form-group">
         <label for="validationEmail" class="form-label mt-2"> Correo </label>
