--- a/bq-project/src/app/admin-user-form/admin-user-form.component.html
+++ b/bq-project/src/app/admin-user-form/admin-user-form.component.html
@@ -62,7 +62,7 @@
           type="submit"
           [disabled]="userForm.invalid"
           class="btnSubmit"
-          value="Agregar Usuario" />
+          value="{{ title }}" />
       </div>
     </form>
   </div>
