--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -101,12 +101,12 @@
       <app-admin-user-form></app-admin-user-form>
     </div>
   </div>
-  <div class="row" style="justify-content: space-evenly; margin: 0">
-    <div class="col-4 bg-light" style="justify-content: center"></div>
-    <div class="col-4 p-1 m-1 bg-light" style="border-radius: 40px">
+  <div class="row mt-4" style="justify-content: space-evenly; margin: 0">
+    <div class="col-3 bg-light" style="justify-content: center"></div>
+    <div class="col-5 p-1 m-1 bg-light" style="border-radius: 40px">
       <app-admin-products-list></app-admin-products-list>
     </div>
-    <div class="col-4 p-1 m-1">
+    <div class="col-3 p-1 m-1">
       <app-admin-products-form></app-admin-products-form>
     </div>
   </div>
