--- a/bq-project/src/app/admin-user-list/admin-user-list.component.html
+++ b/bq-project/src/app/admin-user-list/admin-user-list.component.html
@@ -1,5 +1,5 @@
 <div class="row p-4" style="justify-content: space-evenly;">
-  <div class="card col-sm-5 m-2" *ngFor="let worker of listWorkers">    
+  <div class="card col-sm-5 m-2" *ngFor="let worker of listWorkers | filter:valueSearch">
     <div class="card-body">
       <span class="badge rounded-pill mt-2" *ngIf="worker.roles.admin">
         Administrador
