--- a/bq-project/src/app/admin-user-list/admin-user-list.component.html
+++ b/bq-project/src/app/admin-user-list/admin-user-list.component.html
@@ -1,4 +1,6 @@
-<div class="row p-4" style="justify-content: space-evenly">
+<div
+  class="overflow-auto row p-4 mb-md-0 mr-md-3"
+  style="justify-content: space-evenly; max-height: 480px">
   <select
     class="form-select"
     aria-label="Default select example"
