--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -48,9 +48,9 @@
               style="height: 50px"
               type="text"
               placeholder="Buscar"
-              aria-label="Search" 
+              aria-label="Search"
               #txtSearch
-              (keyup)="searchInput(txtSearch.value)"/>
+              (keyup)="searchInput(txtSearch.value)" />
             <!-- <button class="btn btn-outline-success" type="submit">
               Search
             </button> -->
@@ -59,11 +59,10 @@
       </div>
     </nav>
   </header>
+  <!-- componentes renderizados de user -->
   <div class="row" style="justify-content: space-evenly; margin: 0">
-    <div class="col-3 d-flex" style="justify-content: center">
-      <div
-        class="card p-2 dashboard-container"
-        style="width: 100%; height: 100%">
+    <div class="col-10 col-sm-3" style="justify-content: center">
+      <div class="card p-2 dashboard-container" style="width: 100%">
         <div class="card-body container-card-body">
           <div class="box-dashboard">
             <h5 class="bg-primary">Dashboard</h5>
@@ -72,10 +71,13 @@
             <img
               src="assets/administrador1.jpg"
               alt=""
-              class="img-administradora" />
+              class="img-administradora"
+              style="width: 80px; height: 80px" />
             <h5 class="card-title">AdminName</h5>
           </div>
-          <div class="btn-group-vertical botones">
+          <div
+            class="btn-group-vertical botones m-1"
+            style="align-items: center">
             <div class="btn-group-vertical">
               <button type="button" class="btn btn-outline-primary mt-5">
                 Customers
@@ -93,22 +95,22 @@
         </div>
       </div>
     </div>
-    <div 
-      class="col-5 p-1 m-1 bg-light"
-      style="border-radius: 40px">
-      <!-- *ngIf="workers.length > 0" --> <!-- al colocarlo entro del div, oculta la lista de empleados -->
+    <div class="col-10 col-sm-5 p-1 m-1 bg-light" style="border-radius: 40px">
+      <!-- *ngIf="workers.length > 0" -->
+      <!-- al colocarlo entro del div, oculta la lista de empleados -->
       <app-admin-user-list></app-admin-user-list>
     </div>
-    <div class="col-3 p-1 m-1">
+    <div class="col-10 col-sm-3 p-1 m-1">
       <app-admin-user-form></app-admin-user-form>
     </div>
   </div>
+  <!-- conteniner renderizados de product -->
   <div class="row mt-4" style="justify-content: space-evenly; margin: 0">
-    <div class="col-3 bg-light" style="justify-content: center"></div>
-    <div class="col-5 p-1 m-1 bg-light" style="border-radius: 40px">
+    <div class="col-10 col-sm-3 bg-light" style="justify-content: center"></div>
+    <div class="col-10 col-sm-5 p-1 m-1 bg-light" style="border-radius: 40px">
       <app-admin-products-list></app-admin-products-list>
     </div>
-    <div class="col-3 p-1 m-1">
+    <div class="col-10 col-sm-3 p-1 m-1">
       <app-admin-products-form></app-admin-products-form>
     </div>
   </div>
