--- a/bq-project/src/app/admin/admin.component.scss
+++ b/bq-project/src/app/admin/admin.component.scss
@@ -23,9 +23,11 @@
     display: flex;
     flex-direction: column;
     margin-top: 5%;
-    row-gap: 15%;
     align-items: center;
 }
-.botones{
-    row-gap: 100px;
+.datos-admin-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
