--- a/bq-project/src/app/admin-products-form/admin-products-form.component.html
+++ b/bq-project/src/app/admin-products-form/admin-products-form.component.html
@@ -1,4 +1,3 @@
-<p>admin-products-form works!</p>
 <div class="card">
   <div class="card-body p-5">
     <h3 class="title text-center">{{ title }}</h3>
@@ -55,25 +54,28 @@
           <span>La url <strong>es obligatoria.</strong></span>
         </div>
       </div>
-      <div class="form-group">
-        <label for="validationType" class="form-label">Tipo</label>
+      <label for="validationType" class="form-label mt-4">Tipo</label>
+      <br />
+      <div class="form-check text-center">
         <input
-          type="type"
-          class="form-control"
-          formControlName="type"
           id="validationType"
-          placeholder="Desayuno/Almuerzo y cena" />
-        <div
-          class="text-danger"
-          *ngIf="
-            productForm.get('type')?.hasError('required') &&
-            productForm.get('type')?.touched
-          ">
-          <span>Elige entre <strong>Desayuno / Almuerzo y cena.</strong></span>
-        </div>
+          type="radio"
+          value="Desayuno"
+          name="type"
+          formControlName="type" />
+        <label for="validationType">Desayuno</label>
+      </div>
+      <div class="form-check text-center">
+        <input
+          id="validationType"
+          type="radio"
+          value="Almuerzo y cena"
+          name="type"
+          formControlName="type" />
+        <label for="validationType">Almuerzo y cena</label>
       </div>
 
-      <div class="form-group mt-5 text-center">
+      <div class="form-group mt-4 text-center">
         <input
           type="submit"
           [disabled]="productForm.invalid"
