--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -24,25 +24,7 @@
           class="collapse navbar-collapse"
           id="navbarSupportedContent"
           style="gap: 6%">
-          <ul class="navbar-nav mb-lg-0">
-            <li class="nav-item dropdown" style="margin-left: 30px">
-              <a
-                class="nav-link dropdown-toggle bg-light"
-                href="#"
-                style="height: 45px; padding-top: 10px"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Usuarios</a></li>
-                <li><a class="dropdown-item" href="#">Productos</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="d-flex" style="width: 50%">
+          <form class="d-flex" style="width: 70%; padding-left: 8%;">
             <input
               class="form-control me-2 bg-light"
               style="height: 50px"
@@ -51,9 +33,6 @@
               aria-label="Search"
               #txtSearch
               (keyup)="searchInput(txtSearch.value)" />
-            <!-- <button class="btn btn-outline-success" type="submit">
-              Search
-            </button> -->
           </form>
         </div>
       </div>
@@ -61,7 +40,9 @@
   </header>
   <!-- componentes renderizados de user -->
   <div class="row" style="justify-content: space-evenly; margin: 0">
-    <div class="col-10 col-sm-3" style="justify-content: center">
+    <div
+      class="col-10 col-sm-3"
+      style="justify-content: center; padding-left: 3%;">
       <div class="card p-2 dashboard-container" style="width: 100%">
         <div class="card-body container-card-body">
           <div class="box-dashboard">
@@ -79,10 +60,16 @@
             class="btn-group-vertical botones m-1"
             style="align-items: center">
             <div class="btn-group-vertical">
-              <button type="button" class="btn btn-outline-primary mt-5">
+              <button
+                type="button"
+                class="btn btn-outline-primary mt-5"
+                routerLink="user">
                 Customers
               </button>
-              <button type="button" class="btn btn-outline-secondary mt-3">
+              <button
+                type="button"
+                class="btn btn-outline-secondary mt-3"
+                routerLink="products">
                 Productos
               </button>
             </div>
@@ -95,23 +82,8 @@
         </div>
       </div>
     </div>
-    <div class="col-10 col-sm-5 p-1 m-1 bg-light" style="border-radius: 40px">
-      <!-- *ngIf="workers.length > 0" -->
-      <!-- al colocarlo entro del div, oculta la lista de empleados -->
-      <app-admin-user-list></app-admin-user-list>
-    </div>
-    <div class="col-10 col-sm-3 p-1 m-1">
-      <app-admin-user-form></app-admin-user-form>
-    </div>
-  </div>
-  <!-- conteniner renderizados de product -->
-  <div class="row mt-4" style="justify-content: space-evenly; margin: 0">
-    <div class="col-10 col-sm-3 bg-light" style="justify-content: center"></div>
-    <div class="col-10 col-sm-5 p-1 m-1 bg-light" style="border-radius: 40px">
-      <app-admin-products-list></app-admin-products-list>
-    </div>
-    <div class="col-10 col-sm-3 p-1 m-1">
-      <app-admin-products-form></app-admin-products-form>
+    <div class="col-12 col-sm-9" style="justify-content: center">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </section>
