--- a/bq-project/src/app/admin/admin-user/admin-user-list/admin-user-list.component.scss
+++ b/bq-project/src/app/admin/admin-user/admin-user-list/admin-user-list.component.scss
@@ -14,3 +14,28 @@
 .card{
     border-radius: 1.5rem;
 }
+h5 {
+    font-size: 13px;
+    font-weight: bold;
+}
+p {
+    font-size: 12px;
+}
+
+.form-select {
+    color: #FD090C;
+    border-color: #FD090C;
+    font-weight: bold;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.scroller-container::-webkit-scrollbar {
+    width: 8px;     /* Tamaño del scroll en vertical */  
+    display: none;  /* Ocultar scroll */
+}
+.card-body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
