--- a/bq-project/src/app/admin/admin-user/admin-user.component.html
+++ b/bq-project/src/app/admin/admin-user/admin-user.component.html
@@ -1,5 +1,7 @@
-<div class="row" style="justify-content: space-evenly;">
-  <div class="col-10 col-sm-7 bg-light" style="border-radius: 40px">
+<div class="row" style="justify-content: space-evenly">
+  <div
+    class="col-10 col-sm-7 bg-light"
+    style="border-radius: 25px; height: 480px">
     <app-admin-user-list></app-admin-user-list>
   </div>
   <div class="col-10 col-sm-4">
