--- a/bq-project/src/app/admin/admin-product/admin-product.component.html
+++ b/bq-project/src/app/admin/admin-product/admin-product.component.html
@@ -1,8 +1,10 @@
-  <div class="row" style="justify-content: space-evenly; margin: 0">
-    <div class="col-10 col-sm-7 bg-light" style="border-radius: 40px">
-      <app-admin-products-list></app-admin-products-list>
-    </div>
-    <div class="col-10 col-sm-4">
-      <app-admin-products-form></app-admin-products-form>
-    </div>
+<div class="row" style="justify-content: space-evenly; margin: 0">
+  <div
+    class="col-10 col-sm-8 bg-light"
+    style="border-radius: 25px; height: 480px;">
+    <app-admin-products-list></app-admin-products-list>
   </div>
+  <div class="col-10 col-sm-3" style="border-radius: 25px;">
+    <app-admin-products-form></app-admin-products-form>
+  </div>
+</div>
