--- a/bq-project/src/app/admin/admin-product/admin-products-form/admin-products-form.component.html
+++ b/bq-project/src/app/admin/admin-product/admin-products-form/admin-products-form.component.html
@@ -1,5 +1,5 @@
-<div class="card">
-  <div class="card-body p-5">
+<div class="card" style="border-radius: 25px">
+  <div class="card-body p-4">
     <h3 class="title text-center">{{ title }}</h3>
     <form [formGroup]="productForm" (ngSubmit)="addProduct()">
       <div class="form-group">
@@ -11,7 +11,7 @@
           id="validationName"
           placeholder="Ingresa el nombre" />
         <div
-          class="text-danger"
+          class="text"
           *ngIf="
             productForm.get('name')?.hasError('required') &&
             productForm.get('name')?.touched
@@ -28,7 +28,7 @@
           id="validationPrice"
           placeholder="Ingresa el precio" />
         <div
-          class="text-danger"
+          class="text"
           *ngIf="
             productForm.get('price')?.hasError('required') &&
             productForm.get('price')?.touched
@@ -46,7 +46,7 @@
           id="validateUrl"
           placeholder="Ingresa la url" />
         <div
-          class="text-danger"
+          class="text"
           *ngIf="
             productForm.get('image')?.hasError('required') &&
             productForm.get('image')?.touched
@@ -56,23 +56,23 @@
       </div>
       <label for="validationType" class="form-label mt-4">Tipo</label>
       <br />
-      <div class="form-check text-center">
+      <div class="form-check">
         <input
           id="validationType"
           type="radio"
           value="Desayuno"
           name="type"
           formControlName="type" />
-        <label for="validationType">Desayuno</label>
+        <label class="text-type" for="validationType"> Desayuno</label>
       </div>
-      <div class="form-check text-center">
+      <div class="form-check">
         <input
           id="validationType"
           type="radio"
           value="Almuerzo y cena"
           name="type"
           formControlName="type" />
-        <label for="validationType">Almuerzo y cena</label>
+        <label class="text-type" for="validationType"> Almuerzo y cena</label>
       </div>
 
       <div class="form-group mt-4 text-center">
