--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -1,15 +1,17 @@
 <section class="admin-section">
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light" style="margin: 0 5%">
+    <nav class="navbar navbar-expand-lg navbar-light" style="margin: 0">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><img
-            class="img-logo"
-            src="assets/logo.png"
-            alt=""
-            width="270"
-            height="150"
-        /></a>
+        <a class="navbar-brand">
+          <button
+            class="btn"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasScrolling"
+            aria-controls="offcanvasScrolling">
+            <img class="img-logo" src="assets/logo.png" alt="" width="150" />
+          </button>
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -24,10 +26,10 @@
           class="collapse navbar-collapse"
           id="navbarSupportedContent"
           style="gap: 6%">
-          <form class="d-flex" style="width: 70%; padding-left: 8%;">
+          <form class="d-flex" style="width: 70%; padding-left: 8%">
             <input
               class="form-control me-2 bg-light"
-              style="height: 50px"
+              style="height: 40px"
               type="text"
               placeholder="Buscar"
               aria-label="Search"
@@ -38,51 +40,44 @@
       </div>
     </nav>
   </header>
-  <!-- componentes renderizados de user -->
-  <div class="row" style="justify-content: space-evenly; margin: 0">
-    <div
-      class="col-10 col-sm-3"
-      style="justify-content: center; padding-left: 3%;">
-      <div class="card p-2 dashboard-container" style="width: 100%">
-        <div class="card-body container-card-body">
-          <div class="box-dashboard">
-            <h5 class="bg-primary">Dashboard</h5>
-          </div>
-          <div class="datos-admin-container">
-            <img
-              src="assets/administrador1.jpg"
-              alt=""
-              class="img-administradora"
-              style="width: 80px; height: 80px" />
-            <h5 class="card-title">AdminName</h5>
-          </div>
-          <div
-            class="btn-group-vertical botones m-1"
-            style="align-items: center">
-            <div class="btn-group-vertical">
-              <button
-                type="button"
-                class="btn btn-outline-primary mt-5"
-                routerLink="user">
-                Customers
-              </button>
-              <button
-                type="button"
-                class="btn btn-outline-secondary mt-3"
-                routerLink="products">
-                Productos
-              </button>
-            </div>
-            <div class="btn-logOut mt-5">
-              <button type="button" class="btn btn-outline-secondary mt-5">
-                logOut
-              </button>
-            </div>
-          </div>
+  <!-- NavSIDE -->
+
+  <div
+    class="offcanvas offcanvas-start"
+    data-bs-scroll="true"
+    data-bs-backdrop="false"
+    tabindex="-1"
+    id="offcanvasScrolling"
+    aria-labelledby="offcanvasScrollingLabel">
+    <div class="offcanvas-header">
+      <button
+        type="button"
+        class="btn-close text-reset"
+        data-bs-dismiss="offcanvas"
+        aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div class="btn-group-vertical botones m-1">
+        <h1 class="badge-dashboard">DASHBOARD</h1>
+        <h4 class="text-nav">Pepito de los Palotes</h4>
+        <span class="badge">Administrador</span>
+        <button type="button" class="btn-nav mt-3" routerLink="user">
+          <i class="fa-solid fa-people-line"></i> Colaboradores
+        </button>
+        <button type="button" class="btn-nav mt-4" routerLink="products">
+          <i class="fa-solid fa-cubes"></i> Productos
+        </button>
+        <div class="out-btn">
+          <button type="button" class="btn-out">
+            <i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesión
+          </button>
         </div>
       </div>
     </div>
-    <div class="col-12 col-sm-9" style="justify-content: center">
+  </div>
+  <!-- componentes renderizados de user -->
+  <div class="row" style="justify-content: space-evenly; margin: 0">
+    <div class="col-12 col-sm-12" style="justify-content: center">
       <router-outlet></router-outlet>
     </div>
   </div>
