--- a/bq-project/src/app/login/login.component.scss
+++ b/bq-project/src/app/login/login.component.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .title {
@@ -38,4 +38,9 @@
     justify-content: space-evenly;
     align-items: center;
     margin-top: 2rem;
+}
+
+.form-label {
+    color: #822719;
+    font-family: 'Poppins', sans-serif;
 }
