--- a/bq-project/src/app/home/home.component.html
+++ b/bq-project/src/app/home/home.component.html
@@ -1,1 +1,84 @@
-<p>home works!</p>
+<section class="home-section">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light" style="margin: 0">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+          <button
+            class="btn"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasScrolling"
+            aria-controls="offcanvasScrolling">
+            <img class="img-logo" src="assets/logo.png" alt="" width="150" />
+          </button>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse"
+          id="navbarSupportedContent"
+          style="gap: 6%">
+          <form class="d-flex" style="width: 70%; padding-left: 8%">
+            <input
+              class="form-control me-2 bg-light"
+              style="height: 40px"
+              type="text"
+              placeholder="Buscar"
+              aria-label="Search"
+              #txtSearch
+              (keyup)="searchInput(txtSearch.value)" />
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!-- NavSIDE -->
+
+  <div
+    class="offcanvas offcanvas-start"
+    data-bs-scroll="true"
+    data-bs-backdrop="false"
+    tabindex="-1"
+    id="offcanvasScrolling"
+    aria-labelledby="offcanvasScrollingLabel">
+    <div class="offcanvas-header">
+      <button
+        type="button"
+        class="btn-close text-reset"
+        data-bs-dismiss="offcanvas"
+        aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div class="btn-group-vertical botones m-1">
+        <h1 class="badge-dashboard">DASHBOARD</h1>
+        <h4 class="text-nav">Pepito el Mozo</h4>
+        <span class="badge">Mozo</span>
+        <button type="button" class="btn-nav mt-3" routerLink="menu">
+          <i class="fa-solid fa-people-line"></i> Menú
+        </button>
+        <button type="button" class="btn-nav mt-4" routerLink="orders">
+          <i class="fa-solid fa-cubes"></i> Pedidos
+        </button>
+        <div class="out-btn">
+          <button type="button" class="btn-out">
+            <i class="fa-solid fa-right-from-bracket"></i> Cerrar Sesión
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- componentes renderizados de user -->
+  <div class="row" style="justify-content: space-evenly; margin: 0">
+    <div class="col-12 col-sm-12" style="justify-content: center">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</section>
